# office-mcp

./: .env.example  .gitignore  CHANGELOG.md  CODE_REVIEW_REPORT.md  EXCEL_MCP功能说明文档.md  FIXES_APPLIED.md  FIX_PLAN.md  INSTALLATION_GUIDE.md  OFFICE_MCP_SETUP.md  OFFICE_MCP开发计划.md  OFFICE_MCP技术方案设计.md  OFFICE_MCP服务集成指南.md  Office_AI_Plugin_UI_UX_设计方案.md  Office_AI_Plugin_开发计划.md  Office_AI_Plugin_技术方案.md  POWERPOINT_MCP功能说明文档.md  README.md  RECHECK_CODE_REVIEW_REPORT.md  WORD_MCP功能说明文档.md  package-lock.json  pyproject.toml  requirements.txt  start_bridge_server.bat  start_mcp_server.bat  test_mcp_config.py
.claude/: architecture-review-report.md  refactor-baseline.md  remaining-tasks.md  settings.local.json
.github/workflows/: ci.yml
bridge-server/: .env.example  .eslintrc.json  .gitignore  README.md  jest.config.json  package-lock.json  package.json  run_tests_detailed.bat
bridge-server/src/: app.ts  config.ts  index.ts
bridge-server/src/__tests__/: ConversationManager.test.ts  DocumentService.test.ts  MCPClient.test.ts  OpenAIService.test.ts  SessionManager.test.ts  app.test.ts  setup.ts
bridge-server/src/config/: index.ts
bridge-server/src/controllers/: aiController.ts  fileController.ts  healthController.ts  toolController.ts
bridge-server/src/middleware/: authMiddleware.ts  errorHandler.ts
bridge-server/src/prompts/: officeAssistant.ts
bridge-server/src/routes/: index.ts
bridge-server/src/services/: APIKeyManager.ts  BatchOperationService.ts  ChunkService.ts  ClaudeService.ts  ConversationManager.ts  DocumentService.ts  MCPClient.ts  MCPFunctionConverter.ts  OpenAIService.ts  OperationHistoryManager.ts  SessionManager.ts  StreamingService.ts  TokenManager.ts  ToolExecutionEngine.ts  WebSocketServer.ts
bridge-server/src/types/: external.d.ts  index.ts
bridge-server/src/utils/: logger.ts
docs/: CODE_REFACTORING_PLAN.md  DEVELOPER_GUIDE.md  E2E_TEST_GUIDE.md  LOGGING.md  OFFICE_ADDIN_LOADING_TEST.md  QUICKSTART.md  USER_MANUAL.md
excel-mcp-server/: README.md  package-lock.json  package.json  test-server.js  tsconfig.json
excel-mcp-server/config/: development.json  production.json
excel-mcp-server/data/excel-metrics/: history.json
excel-mcp-server/src/: server.ts
excel-mcp-server/src/__tests__/: monitoring.test.ts
excel-mcp-server/src/core/: ToolRegistry.ts
excel-mcp-server/src/feedback/: FeedbackStorage.ts
excel-mcp-server/src/monitoring/: MetricsStorage.ts  PerformanceMonitor.ts
excel-mcp-server/src/tools-backup/: cell.ts  cells.ts  chart.ts  charts.ts  comment.ts  conditionalFormat.ts  data.ts  dataValidation.ts  education.ts  format.ts  formatting.ts  formula.ts  formulas.ts  image.ts  index.ts  metadata.ts  pivotHierarchy.ts  pivotTableEnhanced.ts  shape.ts  slicer.ts  tableEnhanced.ts  worksheet.ts
excel-mcp-server/src/tools-compressed/: comment.ts  data.ts  dataValidation.ts  index.ts  print.ts  range.ts  shape.ts  (+4 more)
office-addin/: .eslintrc.json  .gitignore  README.md  jest.config.js  manifest.xml  package-lock.json  package.json  tsconfig.json  webpack.config.js
office-addin/public/: taskpane.html
office-addin/src/: App.tsx  index.tsx  setupTests.ts
office-local-bridge/: API.md  README.md  config.json  package-lock.json  package.json  search-config.json  vitest.config.ts
office-local-bridge/.claude/: extensions-implementation.md  operations-log.md  p0-completion-report.md  p1-p2-completion-report.md  phase1-analysis-report.md  phase2-completion-report.md  verification-report.md
office-local-bridge/desktop-app/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
office-local-bridge/desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
office-local-bridge/desktop-app/src-tauri/capabilities/: default.json
office-local-bridge/desktop-app/src-tauri/src/: autostart.rs  commands.rs  config.rs  lib.rs  main.rs
office-local-bridge/docs/: api-design.md  config-pages-design.md  desktop-app-development.md
office-local-bridge/plans/: AI_MODEL_AUTO_FETCH_DESIGN.md  OFFICE_PLUGIN_MANAGEMENT_DESIGN.md
office-local-bridge/src/: server.test.ts  server.ts
office-local-bridge/web/: index.html  package-lock.json  package.json  vite.config.ts
office-plugin/: .env.example  .gitignore  ARCHITECTURE.md  OPTIMIZATION_PLAN.md  PERFORMANCE.md  README.md  fix-errors.js  fluent-demo.html  manifest.xml  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.strict.json  vite.config.ts  vitest.config.excel.ts  vitest.config.ts
office-plugin/docs/: ARCHITECTURE.md  ARCHITECTURE_REVIEW_REPORT.md  OPTIMIZATION_PLAN.md  PERFORMANCE_OPTIMIZATION_PLAN.md  PERFORMANCE_REVIEW_REPORT.md
office-plugin/scripts/: Test-OfficePluginHost.ps1  Test-OfficePluginInstall.ps1  migrate-icons.ps1  verify-optimization-simple.cjs  verify-optimization.ts
office-plugin/src/: commands.html  vite-env.d.ts
powerpoint-mcp-server/: README.md  package-lock.json  package.json  test-server.js  vitest.config.ts
powerpoint-mcp-server/config/: development.json  production.json
powerpoint-mcp-server/src/: server.ts
shared/: package-lock.json  package.json  tsconfig.json
shared/src/: index.ts
src/office_mcp_server/: __init__.py  config.py  main.py
tests/: README.md  conftest.py  test_batch_optimizer.py  test_config.py  test_excel_handler.py  test_file_manager.py  test_format_helper.py  test_ppt_handler.py  test_word_handler.py
tests/compatibility/: test_office_versions.py
tests/e2e/: bridge-communication.test.js  performance-benchmark.test.js  test_office_integration.py
tests/performance/: test_load_performance.py
tests/results/: e2e-test-1762950320344.json  e2e-test-1762950416901.json  e2e-test-1762950453120.json  e2e-test-1762950620173.json
tests/security/: test_security.py
tests/user_acceptance/: test_user_scenarios.py
word-mcp-server/: README.md  package-lock.json  package.json  test-server.js  translate-all-descriptions.js  translate-descriptions.js
word-mcp-server/config/: development.json  production.json
word-mcp-server/src/: server.ts
(+941 files in other folders)
